[package]
name = "rusty-quantum"
description = "A Rust library for quantum computing mimicking the functionality of Qiskit."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
num = "0.4.3"
nalgebra = "0.32.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
flate2 = "1"
pest = "2.8.6"
pest_derive = "2.8.6"
num-complex = "0.4"
rand = "0.8"